client/views/coursescard/coursescard-chart.css
.cc-middle-content {
  display: flex;
  align-items: center;
  justify-content: center !important;
  flex-direction: row;
  position: relative;
  border-bottom: 1px solid #eee;
  height: 200px !important;
}

.cc-metadata {
  width: 100%;
  flex: 1;
  align-self: center;
  position: absolute;
  /* bottom: -40px; */
  font-size: 12px;
  /* overflow: visible; */
  text-align: center;
}

.cc-nothing {
  display: flex;
  justify-content: center;
  align-items: center;
  /*background: #f6f6f6;*/
  flex-direction: column;
  color: #a5a5a5;
  width:  100%;
  text-align: center;
  height: 200px;
}

.cc-nothing-add {
  text-decoration: underline;
  color: #a3456b;
  font-size: 14px;
  padding: 5px;
  cursor: pointer;
  text-align: center;
  margin-top: 35px;
}

.cc-course {
  flex: 1;
  flex-direction: column;
  cursor: pointer;
  position: relative;
  align-self: flex-start;
  justify-content: flex-end;
  width: 90px;
  height: 200px;
  align-items: center;
  border-radius: 5px 5px 0px 0px;
  /*background: #e1e1e1;*/
  /*background: #b25d7e;*/
}

.cc-course:hover {
  background: #eceff1;
}

.cc-meta {
  text-align: left;
  flex-direction: column;
  font-size: 14px;
  min-width: 40px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.cc-name {
  padding-top: 3px;
  padding-left:3px;
  color: #424242;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-transform: capitalize;
  position: relative;
}

.cc-id {
  padding-bottom:3px;
  padding-left:  3px;
  color: #9F9F9F;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.cc-badge {
  left: 15px !important;
  top: -17px !important;
}

.cc-badge > #badge {
  background: none !important;
  color: #424242 !important;
}

.number-courses {
  font-size: 18px;
  position: absolute;
  bottom: 15px;
  right: 15px;
  color: gray;
  display: flex;
  align-items: flex-end;
}

.cc-number {
  color: #9F9F9F;
  width: 100%;
  justify-content: flex-end;
  display: flex;
  font-size: 14px;
}

.cc-bottom {
  background: none;
  border-radius: 5px 5px 0px 0px;
  border-left: 1px dashed #d9aebf;
  border-right:1px dashed #d9aebf;
  border-top:  1px dashed #d9aebf;
  width: 45px;
  align-self: center;
}

.cc-top {
  background: #b25d7e;
  width: 45px;
  align-self: center;
}

.cc-meter {
  display: flex;
  flex-direction: column;
  width: 100%;
  position: relative;
  height: 200px;
  justify-content: flex-end;
  align-items: ;
}

.cc-topdata {
  font-size: 12px;
  font-weight: 600;
  text-align: center;
  height: 15px;
}

.cc-value {
  color: #424242;
}

.cc-passed-legend {
  position: absolute;
  font-size: 12px;
  width: 65px;
  padding: 3px;
  border-radius: 3px;
  background: rgba(66, 66, 66, 0.75);
  /* top: 0; */
  /* left: 45%; */
  color: white;
  z-index: 100;
  display: none;
  /* justify-content: center; */
}

.card-subtitle-tool {
    display: flex;
    width: 100%;
    align-items: center;
    justify-content: center;
    padding-top: 10px;
}

